--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="wrapper">
 			<div class="amperka">
-				<a href="amperka.ru" style="border: 0px">
+				<a href="http://amperka.ru" style="border: 0px">
 					<img class="amperka__logo" src="/media/logo.png">
 				</a>
 			</div>
@@ -20,14 +20,30 @@
 				<div class="iv-embed" style="margin:0 auto;padding:0;border:0;width:482px;"><div class="iv-v" style="display:block;margin:0;padding:1px;border:0;background:#000;"><iframe class="iv-i" style="display:block;margin:0;padding:0;border:0;" src="https://open.ivideon.com/embed/v2/?server=200-5696fe6a4a34dc06d83a34d9f7d94680&amp;camera=65536&amp;width=&amp;height=&amp;lang=ru" width="480" height="270" frameborder="0" allowfullscreen></iframe></div><div class="iv-b" style="display:block;margin:0;padding:0;border:0;"><div style="float:right;text-align:right;padding:0 0 10px;line-height:10px;"><a class="iv-a" style="font:10px Verdana,sans-serif;color:inherit;opacity:.6;" href="https://www.ivideon.com/" target="_blank">powered by Ivideon</a></div><div style="clear:both;height:0;overflow:hidden;">&nbsp;</div><script src="https://open.ivideon.com/embed/v2/embedded.js"></script></div></div>
 			</div>
 			<div class="controlButtonsWrapper">
+				<div class="controlButtonsTitle">Панель управления</div>
 				<div id="controlButtons" class="controlButtons">
 
 				</div>
 			</div>
+			<div class="voteButtonsWrapper">				
+				<div class="voteButtons">
+					Голосование<br>
+					<button onclick="voteAction('feed')" id="feedButton" class="voteButton voteButtonFeed">
+						&nbsp;<br>
+						Покормить<br>
+						<i id="feedTimer">&nbsp;</i>
+					</button>
+					<button onclick="voteAction('scare')" id="scareButton" class="voteButton voteButtonScare">
+						&nbsp;<br>
+						Напугать<br>
+						<i id="scareTimer">&nbsp;</i>
+					</button>
+				</div>
+			</div>
 			<div class="messagesWrapper">
-				<input type="text" class="messageText" id="message_input" onkeydown = "if (event.keyCode == 13) document.getElementById('sendButton').click()"/>
-				<button class="sendButton" onclick="sendMessage()" id="sendButton">Написать</button>
-				Чат: <br>
+				<div class="messagesTitle">Чат</div>
+				<input type="text" class="messageText" id="message_input" placeholder="текст..." onkeydown = "if (event.keyCode == 13) sendMessage()"/>
+				<button class="sendButton" onclick="sendMessage()" id="sendButton">Отправить</button>
 				<div class="chatBox" id="chatlog"></div>
 			</div>
 		</div>
